--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -11,6 +11,7 @@ import sealioningImage from "../images/sealioning/sealioning.png";
 import aiParadoxImage from "../images/ai-paradox.png";
 import choaticState from "../images/chaotic-state-to-simplicity.png";
 import reactSimpleComplex from "../images/react-simple-complex.png";
+import nodesImage from "../images/nodes-computer.png"
 
 const cards = [
   {
@@ -18,6 +19,12 @@ const cards = [
     alt: "tech abstract",
     title: "How I Code",
     href: "/blog/how-i-code",
+  },
+  {
+    src: nodesImage,
+    alt: "Explore a powerful custom state management solution for React applications. Learn how to leverage Immer for immutable state, optimize performance with useSyncExternalStoreWithSelector, and implement robust lifecycle hooks. Discover benefits for building scalable and maintainable front-end projects.",
+    title: "Mastering State: A Deep Dive into a Custom State Management Library",
+    href: "/blog/deep-dive-state-management"
   },
   {
     src: reactSimpleComplex,
